environments/coolstore-catalog-stage/apps/app-coolstore-catalog/services/coolstore-catalog/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
spec:
  replicas: 1
  strategy: {}
  template:
    spec:
      containers:
        - name: catalog
          image: >-
            quay.io/adrina/coolstore-catalog:main-7c01b0b4872bd1345c1f7ca3214460cbf6549f8a
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
#          env:
#            - name: JAVA_OPTS_APPEND
#              value: -Dspring.profiles.active=openshift
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      serviceAccountName: default
status: {}
