environments/coolstore-catalog-stage/apps/app-coolstore-catalog/services/coolstore-catalog/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: catalog
    app.kubernetes.io/part-of: coolstore-catalog
    app.kubernetes.io/component: catalog
    app.kubernetes.io/instance: catalog
  name: catalog
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
  selector:
    deploymentconfig: catalog
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
