environments/coolstore-catalog-stage/apps/app-coolstore-catalog/services/coolstore-catalog/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: catalog
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: catalog
    weight: 100
  wildcardPolicy: None
